improve : added description on messageBox when 100 unknwon reason error occured.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -474,7 +474,13 @@ i.ovp-con{
       max-width : 80%;
       border-radius: 4px;
       cursor: pointer;
+      .ovp-message-description{
+        font-size : 12px;
+        margin-top: 12px;
+        color : #999;
+      }
     }
+
 
     .ovp-message-icon{
       display: inline-block;
@@ -1320,7 +1326,6 @@ i.ovp-con{
     .ovp-message-container{
       top : 50%;
       font-weight : bold;
-
 
       .ovp-message-icon{
         margin-top: 0;
