--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -558,6 +558,7 @@ i.ovp-con{
       top : 0;
       font-size: 2.857em;
       font-weight: bold;
+      line-height: 1.4;
       text-shadow: 1px 1px 2px rgba(217,217,217,0.5);
       &:after{
         dispaly: block;
