fix : vod can't trigger complete event when Ad occurred Error.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -1369,6 +1369,11 @@ i.ovp-con{
       font-size: 24px;
     }
   }
+  .ovp-right-controls{
+    .ovp-button{
+      margin-top: -2px;
+    }
+  }
 }
 /**
  * @brief   Animation
