fix : button menu icon aliment.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -249,7 +249,7 @@ i.ovp-con{
   width: 30px;
   line-height: 30px;
 
-  display: inline-block;
+  display: block;
   text-decoration: inherit;
   text-align: center;
 
