--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -951,7 +951,7 @@ i.ovp-con{
     float : left;
     visibility: hidden;
     position: relative;
-    width: 0px;
+    width: 0;
     margin-right: 0;
     line-height: 30px;
     height: 30px;
@@ -959,18 +959,20 @@ i.ovp-con{
     user-select: none;
     outline: none;
 
-    -moz-transition: visible .2s cubic-bezier(0.4,0.0,1,1),width .2s cubic-bezier(0.4,0.0,1,1);
+    /*-moz-transition: visible .2s cubic-bezier(0.4,0.0,1,1),width .2s cubic-bezier(0.4,0.0,1,1);
     -webkit-transition: visible .2s cubic-bezier(0.4,0.0,1,1),width .2s cubic-bezier(0.4,0.0,1,1);
-    transition: visible .2s cubic-bezier(0.4,0.0,1,1),width .2s cubic-bezier(0.4,0.0,1,1);
-
-    &.active{
+    transition: visible .2s cubic-bezier(0.4,0.0,1,1),width .2s cubic-bezier(0.4,0.0,1,1);*/
+    width: 70px;
+    margin-left: 8px;
+    visibility: visible;
+    /*&.active{
       width: 70px;
       margin-left: 8px;
       visibility: visible;
       -moz-transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
       -webkit-transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
       transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1)
-    }
+    }*/
 
     .ovp-volume-silder {
       height: 100%;
@@ -984,15 +986,14 @@ i.ovp-con{
         margin-top: -2px;
         border-radius: 10px;
       }
-
       .ovp-volume-slider-bg {
         width: 100%;
         background: #fff;
       }
-
       .ovp-volume-slider-value {
         width: 100%;
         background: #50e3c2;
+        border-radius: 10px 0 0 10px;
       }
 
       .ovp-volume-slider-handle {
@@ -1005,7 +1006,7 @@ i.ovp-con{
         margin-top: -6px;
         background: #fff;
 
-        &:before, &:after {
+        /*&:before, &:after {
           content: '';
           position: absolute;
           display: none;
@@ -1021,7 +1022,7 @@ i.ovp-con{
         &:after {
           left: 6px;
           background: #fff;
-        }
+        }*/
       }
     }
   }
@@ -1371,7 +1372,7 @@ i.ovp-con{
   }
   .ovp-right-controls{
     .ovp-button{
-      margin-top: -2px;
+      //margin-top: -2px;
     }
   }
 }
@@ -1525,7 +1526,7 @@ i.ovp-con{
 
 
   /* Pulse Shrink */
-  .ovp-button {
+  /*.ovp-button {
     //display: inline-block;
     //vertical-align: middle;
     transform: translateZ(0);
@@ -1539,6 +1540,6 @@ i.ovp-con{
   .ovp-button:focus,
   .ovp-button:active {
     transform: scale(1.1);
-  }
+  }*/
 }
 
