improve : Ads system operation structure.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -951,28 +951,27 @@ i.ovp-con{
     float : left;
     visibility: hidden;
     position: relative;
-    width: 0;
+    width: 0px;
     margin-right: 0;
     line-height: 30px;
     height: 30px;
     cursor: pointer;
     user-select: none;
     outline: none;
+    //display : block;
 
-    /*-moz-transition: visible .2s cubic-bezier(0.4,0.0,1,1),width .2s cubic-bezier(0.4,0.0,1,1);
-    -webkit-transition: visible .2s cubic-bezier(0.4,0.0,1,1),width .2s cubic-bezier(0.4,0.0,1,1);
-    transition: visible .2s cubic-bezier(0.4,0.0,1,1),width .2s cubic-bezier(0.4,0.0,1,1);*/
-    width: 70px;
-    margin-left: 8px;
-    visibility: visible;
-    /*&.active{
+    //-moz-transition: visible .2s cubic-bezier(0.4,0.0,1,1),width .2s cubic-bezier(0.4,0.0,1,1);
+    //-webkit-transition: visible .2s cubic-bezier(0.4,0.0,1,1),width .2s cubic-bezier(0.4,0.0,1,1);
+    //transition: visible .2s cubic-bezier(0.4,0.0,1,1),width .2s cubic-bezier(0.4,0.0,1,1);
+
+    &.active{
       width: 70px;
       margin-left: 8px;
       visibility: visible;
-      -moz-transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
-      -webkit-transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
-      transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1)
-    }*/
+      //-moz-transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
+      //-webkit-transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
+      //transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1)
+    }
 
     .ovp-volume-silder {
       height: 100%;
