improve : sets icon name for special.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -266,23 +266,23 @@ i.ovp-con{
   &.disable {
     color : #4f4f4f;
   }
-  &.close-icon{&::before{content: "\e900";}}
-  &.pause-big{&::before{content: "\e911";}}
-  &.fullscreen-compress{&::before{content: "\e901";}}
-  &.fullscreen-expand{&::before{content: "\e902";}}
-  &.arrow-left{&::before{content: "\e903";}}
-  &.arrow-right{&::before{content: "\e909";}}
-  &.empty-video{&::before{content: "\e904";}}
-  &.play{&::before{content: "\e906";}}
-  &.playlist{&::before{content: "\e907";}}
-  &.replay-big{&::before{content: "\e908";}}
-  &.setting{&::before{content: "\e90A";}}
-  &.pause{&::before{content: "\e90C";}}
-  &.volume-small{&::before{content: "\e90D";}}
-  &.volume-mute{&::before{content: "\e90E";}}
-  &.volume-max{&::before{content: "\e90F";}}
-  &.play-big{&::before{content: "\e910";}}
-  &.warning{&::before{content: "\e912";}}
+  &.op-close-icon{&::before{content: "\e900";}}
+  &.op-pause-big{&::before{content: "\e911";}}
+  &.op-fullscreen-compress{&::before{content: "\e901";}}
+  &.op-fullscreen-expand{&::before{content: "\e902";}}
+  &.op-arrow-left{&::before{content: "\e903";}}
+  &.op-arrow-right{&::before{content: "\e909";}}
+  &.op-empty-video{&::before{content: "\e904";}}
+  &.op-play{&::before{content: "\e906";}}
+  &.op-playlist{&::before{content: "\e907";}}
+  &.op-replay-big{&::before{content: "\e908";}}
+  &.op-setting{&::before{content: "\e90A";}}
+  &.op-pause{&::before{content: "\e90C";}}
+  &.op-volume-small{&::before{content: "\e90D";}}
+  &.op-volume-mute{&::before{content: "\e90E";}}
+  &.op-volume-max{&::before{content: "\e90F";}}
+  &.op-play-big{&::before{content: "\e910";}}
+  &.op-warning{&::before{content: "\e912";}}
 }
 .ovp-badge{
   display: inline-block;
@@ -328,7 +328,7 @@ i.ovp-con{
       content: '';
       clear: both;
     }
-    .ovp-con.close-icon{
+    .ovp-con.op-close-icon{
       float : right;
     }
   }
