fix : fullscreen display error.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -1136,7 +1136,7 @@ i.ovp-con{
 .ovp-fullscreen-button {
   position: relative;
   margin-right: 15px;
-  .fullscreen-compress{display:none;}
+  .op-fullscreen-compress{display:none;}
 }
 
 /**
