--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -207,7 +207,7 @@
   height: 100%;
   width: 100%;
   padding-bottom : 34px;
-  pointer-events: none;
+  //pointer-events: none;
   top:0;
   &>div{
     position: absolute !important;
@@ -217,6 +217,62 @@
       pointer-events :auto;
     }
   }
+
+  video.op-ads-vast-video{
+    background-color: rgb(0, 0, 0);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    z-index: 1000;
+  }
+
+  .op-ads-button{
+    bottom: 36px;
+    cursor: default;
+    margin-right: 4px;
+    pointer-events: auto;
+    position: absolute;
+    right: 0;
+    z-index: 1000;
+    width: auto !important;
+    height: auto !important;
+    border-radius: 4px;
+    background-color: rgba(18, 18, 28, 0.7);
+    min-width: 155px;
+    display: none;
+
+    .op-ads-textview{
+      color: #e6e6e6;
+      font-family: arial,sans-serif;
+      font-weight: normal;
+      font-size: 11px;
+      padding: 6px 12px;
+      text-align: center;
+      display: inline-block;
+      width: 100%;
+      vertical-align: middle;
+    }
+    .videoAdUiAction {
+      color: #fff;
+      padding: 8px 24px;
+      cursor: pointer;
+      direction: ltr;
+      font-weight: normal;
+      font-size: 20px;
+      border : 1px solid rgba(255,255,255,0.5);
+      &:hover{
+        border-radius: 4px;
+        border : 1px solid rgba(255,255,255,1);
+      }
+      i{
+        display: inline-block;
+        width : auto;
+      }
+    }
+  }
+
 }
 
 /**
@@ -663,9 +719,8 @@ i.ovp-con{
       position: absolute;
       width: 100%;
       height: 100%;
-      background-color: #12121c;
+      background-color: rgba(18, 18, 28, 0.3);
       pointer-events: none;
-      opacity: 0.3;
       /*-moz-transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
       -webkit-transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
       transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);*/
@@ -1340,7 +1395,13 @@ i.ovp-con{
       }
     }
   }
-
+  .op-ads-button{
+    bottom: 22px;
+    .videoAdUiAction{
+      padding: 4px;
+      font-size: 14px;
+    }
+  }
 }
 
 /*AD MODE*/
