--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -1226,65 +1226,68 @@ i.ovp-con{
 .ovp-spinner-container {
   position: absolute;
   top: 50%;
+  width: 64px;
   left: 50%;
-  margin-left: -6px;
-  margin-top: -6px;
+  margin-left: -32px;
+  margin-top: -32px;
   z-index: 1009;
   display : none;
 
-  .op-spinner:before{
-    content: "";
-    position: absolute;
-    background-color: rgba(80, 227, 194, .5);
-    top: 0px;
-    left: -25px;
-    height: 12px;
-    width: 12px;
-    border-radius: 12px;
-  }
-
-  .op-spinner{
+  .ovp-ellipsis {
+    display: inline-block;
     position: relative;
-    width: 12px;
-    height: 12px;
-
-    top: 46%;
-    top: -webkit-calc(50% - 6px);
-    top: calc(50% - 6px);
-    left: 46%;
-    left: -webkit-calc(50% - 6px);
-    left: calc(50% - 6px);
-
-    border-radius: 12px;
-    background-color: #50e3c2;
-    -webkit-transform-origin:  50% 50%;
-    transform-origin:  50% 50% ;
-    -webkit-animation: op-spinner 1s ease-in-out infinite;
-    animation: op-spinner 1s ease-in-out infinite;
+    width: 64px;
+    height: 11px;
   }
-
-  .op-spinner:after{
-    content: "";
+  .ovp-ellipsis div {
     position: absolute;
-    background-color: rgba(80, 227, 194 ,.5);
-    top: 0px;
-    left: 25px;
-    height: 12px;
-    width: 12px;
-    border-radius: 12px;
+    top: 27px;
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    background-color: #50e3c2;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
   }
-  @-webkit-keyframes op-spinner{
-    0%{-webkit-transform:rotate(0deg);}
-    50%{-webkit-transform:rotate(180deg);}
-    100%{-webkit-transform:rotate(180deg);}
+  .ovp-ellipsis div:nth-child(1) {
+    left: 6px;
+    animation: lds-ellipsis1 0.6s infinite;
   }
-
-  @keyframes op-spinner{
-    0%{transform:rotate(0deg);}
-    50%{transform:rotate(180deg);}
-    100%{transform:rotate(180deg);}
+  .ovp-ellipsis div:nth-child(2) {
+    left: 6px;
+    animation: lds-ellipsis2 0.6s infinite;
   }
-
+  .ovp-ellipsis div:nth-child(3) {
+    left: 26px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .ovp-ellipsis div:nth-child(4) {
+    left: 45px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes lds-ellipsis3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes lds-ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(19px, 0);
+    }
+  }
 }
 
 
