--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -186,9 +186,25 @@
     font-variant: inherit;
     font-stretch: inherit;
     -webkit-tap-highlight-color: rgba(255,255,255,0);
-    text-align: left;
-    direction: ltr;
   }
+
+  /*
+    color: inherit;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+    float: none;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 1em;
+    line-height: 1em;
+    list-style: none;
+    text-transform: none;
+    vertical-align: baseline;
+    border: 0;
+    font-variant: inherit;
+    font-stretch: inherit;
+    -webkit-tap-highlight-color: rgba(255,255,255,0);
+    */
 }
 
 .op-player {
@@ -1233,18 +1249,18 @@ i.op-con{
     position: relative;
     width: 64px;
     height: 64px;
-    opacity: 0.8;
+    //opacity: 0.8;
     div {
       box-sizing: border-box;
       display: block;
       position: absolute;
       width: 51px;
       height: 51px;
-      margin: 4px;
-      border: 4px solid #50e3c2;
+      margin: 6px;
+      border: 2px solid #fff;
       border-radius: 50%;
       animation: op-spinner 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-      border-color: #50e3c2 transparent transparent transparent;
+      border-color: #fff transparent transparent transparent;
     }
 
     div:nth-child(1) {
