--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -96,7 +96,7 @@
   zoom: 1 !important;
   width: 100%;
   display: block;
-  font-family: Arial,Helvetica,sans-serif;
+  font-family: Helvetica,Arial,sans-serif;
   background-color: #000;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -176,7 +176,7 @@
     padding: 0;
     margin: 0;
     float: none;
-    font-family: Arial,Helvetica,sans-serif;
+    font-family: Helvetica,Arial,sans-serif;
     font-size: 1em;
     line-height: 1em;
     list-style: none;
@@ -187,24 +187,6 @@
     font-stretch: inherit;
     -webkit-tap-highlight-color: rgba(255,255,255,0);
   }
-
-  /*
-    color: inherit;
-    background-color: transparent;
-    padding: 0;
-    margin: 0;
-    float: none;
-    font-family: Arial,Helvetica,sans-serif;
-    font-size: 1em;
-    line-height: 1em;
-    list-style: none;
-    text-transform: none;
-    vertical-align: baseline;
-    border: 0;
-    font-variant: inherit;
-    font-stretch: inherit;
-    -webkit-tap-highlight-color: rgba(255,255,255,0);
-    */
 }
 
 .op-player {
@@ -296,7 +278,7 @@
 
     .op-ads-textview{
       color: #e6e6e6;
-      font-family: arial,sans-serif;
+      //font-family: arial,sans-serif;
       font-weight: normal;
       font-size: 11px;
       padding: 6px 12px;
@@ -1078,9 +1060,9 @@ i.op-con{
       width: 70px;
       margin-left: 8px;
       visibility: visible;
-      //-moz-transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
-      //-webkit-transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
-      //transition: visible .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1)
+      -moz-transition: visibility .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
+      -webkit-transition: visibility .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
+      transition: visibility .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
     }
 
     .op-volume-silder {
@@ -1181,7 +1163,6 @@ i.op-con{
   padding: 6px 0;
   background: rgba(28,28,28,0.9);
   text-shadow: 0 0 2px rgba(0,0,0,.5);
-  font-family: Roboto,Arial,Helvetica,sans-serif;
   font-weight : lighter;
   user-select: none;
 
@@ -1244,33 +1225,22 @@ i.op-con{
   margin-top: -32px;
   z-index: 1009;
   display : none;
+
+
   .op-spinner {
     display: inline-block;
     position: relative;
     width: 64px;
     height: 64px;
-    //opacity: 0.8;
-    div {
-      box-sizing: border-box;
-      display: block;
-      position: absolute;
-      width: 51px;
-      height: 51px;
-      margin: 6px;
-      border: 2px solid #fff;
-      border-radius: 50%;
-      animation: op-spinner 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-      border-color: #fff transparent transparent transparent;
-    }
 
-    div:nth-child(1) {
-      animation-delay: -0.45s;
-    }
-    div:nth-child(2) {
-      animation-delay: -0.3s;
-    }
-    div:nth-child(3) {
-      animation-delay: -0.15s;
+    border: 4px solid transparent;
+    border-top: 4px solid #50e3c2;
+    border-radius: 50%;
+
+    animation: spin 1.2s  cubic-bezier(0.5, 0, 0.5, 1)  infinite;
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
   }
 
