--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -1046,7 +1046,7 @@ i.op-con{
   .op-volume-slider-container {
     /*display: inline-block;*/
     float : left;
-    visibility: hidden;
+    opacity : 0;
     position: relative;
     width: 0px;
     margin-right: 0;
@@ -1058,11 +1058,11 @@ i.op-con{
 
     &.active{
       width: 70px;
+      opacity : 1;
       margin-left: 8px;
-      visibility: visible;
-      -moz-transition: visibility .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
-      -webkit-transition: visibility .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
-      transition: visibility .2s cubic-bezier(0.0,0.0,0.2,1),width .2s cubic-bezier(0.0,0.0,0.2,1);
+      -moz-transition: opacity .4s cubic-bezier(0.0,0.0,0.2,1);
+      -webkit-transition: opacity .4s cubic-bezier(0.0,0.0,0.2,1);
+      transition: opacity .4s cubic-bezier(0.0,0.0,0.2,1);
     }
 
     .op-volume-silder {
@@ -1085,6 +1085,9 @@ i.op-con{
         width: 100%;
         background: #50e3c2;
         border-radius: 10px 0 0 10px;
+        -moz-transition: width .2s cubic-bezier(0.0,0.0,0.2,1);
+        -webkit-transition: width .2s cubic-bezier(0.0,0.0,0.2,1);
+        transition: width .2s cubic-bezier(0.0,0.0,0.2,1);
       }
 
       .op-volume-slider-handle {
@@ -1093,9 +1096,12 @@ i.op-con{
         left: 30px;
         width: 12px;
         height: 12px;
-        border-radius: 6px;
+        border-radius: 10px;
         margin-top: -6px;
         background: #fff;
+        -moz-transition: left .2s cubic-bezier(0.0,0.0,0.2,1);
+        -webkit-transition: left .2s cubic-bezier(0.0,0.0,0.2,1);
+        transition: left .2s cubic-bezier(0.0,0.0,0.2,1);
       }
     }
   }
