Fixed: UI Blocked when no available media source
Add: Low latency Mpeg Dash options

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -675,6 +675,7 @@ i.op-con{
   user-select: none;
   background-color: rgba(28,28,28,.9);
   text-shadow: 0 0 2px rgba(0,0,0,.5);
+  z-index: 1010;
 
   &.background{
     //opacity: 0;
