Added: To making connection with OME running on private network, Clone ice candidates that requested from OME and modify address property

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -369,7 +369,7 @@ i.op-con{
   &.op-setting{&::before{content: "\e90A";}}
   &.op-pause{&::before{content: "\e90C";}}
   &.op-volume-small{display:none;&::before{content: "\e90D";}}
-  &.op-volume-mute{diplay:none;&::before{content: "\e90E";}}
+  &.op-volume-mute{display:none;&::before{content: "\e90E";}}
   &.op-volume-max{&::before{content: "\e90F";}}
   &.op-play-big{&::before{content: "\e910";}}
   &.op-warning{&::before{content: "\e912";}}
