Added: While signaling, Chrome on Android fails setLocalDescription when get offer SDP that has h264(Chrome on Android misses adding h264 line in SDP after first page load). So OvenPlayer re do signaling until browser create right SDP.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -820,7 +820,7 @@ i.op-con{
       .op-left-controls {
         float: left;
         height: 50px;
-        padding: 10px 0;
+        padding: 14px 0 10px 0;
         &:after{
           content: '';
           clear: both;
@@ -829,7 +829,7 @@ i.op-con{
       .op-right-controls {
         float: right;
         height: 50px;
-        padding: 10px 0;
+        padding: 14px 0 10px 0;
        // display: inline-flex;
         //margin : 10px 0;
         &:after{
