Add fullscreenOption to over ride requestFullScreen option.
usage:

var playerInstance = OvenPlayer.create("main_video", {
        ...
        fullscreenOption: {
            navigationUI: 'hide'
        }
        ...
    }

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -1424,6 +1424,9 @@ i.op-con{
   .op-bottom-panel{
     height : 34px;
     .op-controls{
+
+      top: 4px;
+
       .op-left-controls{
         height: 30px;
         padding : 0;
@@ -1450,6 +1453,10 @@ i.op-con{
     .op-button{
       //margin-top: -2px;
     }
+  }
+
+  .op-controls-container .op-bottom-panel .op-progressbar-container {
+    bottom: 30px;
   }
 }
 /**
