New Feature. OvenPlayer can cuts the playback before and after of amount time using sources.sectionStart and sources.sectionEnd. New Feature. OvenPlayer can disable user interaction with progress bar for preventing time seeking.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -783,6 +783,10 @@ i.op-con{
       cursor: pointer;
       bottom: 50px;
 
+      &.op-progressbar-container-disabled {
+        cursor: default;
+      }
+
       .op-progressbar-padding {
         position: absolute;
         width: 100%;
