New features. OvenPlayer can insert water mark on the video by using the waterMark option

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -679,6 +679,27 @@ i.op-con{
 }
 
 /**
+ * @brief   WaterMark
+ * */
+
+.op-watermark-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1001;
+
+  .op-watermark {
+    position: absolute;
+    display: inline-block;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+/**
  * @brief   Setting panel
  * */
 
