Text Changed: From "low latency" to "Sub-Second Latency" New Feature: OvenPlayer can hide big play button by using showBigPlayButton option.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -373,6 +373,7 @@ i.op-con{
   &.op-arrow-right{&::before{content: "\e909";}}
   &.op-empty-video{&::before{content: "\e904";}}
   &.op-play{&::before{content: "\e906";}}
+  &.op-replay{&::before{content: "\e908";}}
   &.op-seek-back{&::before{content: "\e920";}}
   &.op-seek-forward{&::before{content: "\e921";}}
   &.op-playlist-icon{&::before{content: "\e907";}}
