Improved: Fixed an issue where the subtitle UI was unintentionally displayed when used with the Bootstrap framework.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -729,6 +729,7 @@ i.op-con{
     color: #eee;
     cursor: pointer;
     outline: none;
+    text-align: left;
   }
 
   .op-setting-title-container{
@@ -1375,7 +1376,8 @@ i.op-con{
       user-select: none;
       word-break: break-word;
       white-space: pre-line;
-
+      border: none;
+      background: none;
     }
   }
 }
