Bug Fixed: Unexpected layout conflict of quick seek button on IE 11.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -1106,14 +1106,18 @@ i.op-con{
   }
 
   i {
+    padding-top: 1px;
     font-size: 26px;
   }
 
   span {
     position: absolute;
-    top: 9px;
-    left: 9px;
+    top: 10.5px;
+    left: 0;
+    right: 0;
+    text-align: center;
     font-size: 10px;
+    line-height: 10px;
     cursor: pointer;
   }
 }
