--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -686,8 +686,12 @@ i.op-con{
 .op-watermark-container {
   position: absolute;
   width: 100%;
-  height: 100%;
-  z-index: 1001;
+  height: auto;
+  padding-bottom: 56.25%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1002;
 
   .op-watermark {
     position: absolute;
