--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -643,24 +643,24 @@ i.op-con{
 
 .op-thumbnail-container{
   position: absolute;
-  top: 0;
   width: 100%;
-  left: 0;
-  height: 100%;
+  height: auto;
+  padding-bottom: 56.25%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index : 1001;
   pointer-events: none;
 
   .op-thumbnail-wrapper{
-    position: relative;
+    position: absolute;
+    left : 0;
+    top : 0;
+    width: 100%;
     height : 100%;
-    padding: 2.857em;
     img{
       width:100%;
-      max-height:100%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      height:100%;
     }
     .op-thumbnail-header{
       position: relative;
