--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -663,15 +663,17 @@ i.op-con{
       height:100%;
     }
     .op-thumbnail-header{
-      position: relative;
-      left : 0;
-      top : 0;
+      position: absolute;
+      left : 1rem;
+      top : 1rem;
+      padding: 0 0.5rem;
       font-size: 2.857em;
       font-weight: bold;
       line-height: 1.4;
       text-shadow: 1px 1px 2px rgba(217,217,217,0.5);
+      background: rgb(14 14 14 / 10%);
       &:after{
-        dispaly: block;
+        display: block;
         content: '';
         clear: both;
       }
