--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -155,7 +155,9 @@
       max-width: calc(100vh * 16 / 9);
       height: calc(100vw * 9 / 16);
       max-height: 100vh;
-      padding-bottom: 0;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
   }
@@ -653,11 +655,11 @@ i.op-con{
 .op-thumbnail-container{
   position: absolute;
   width: 100%;
-  height: auto;
-  padding-bottom: 56.25%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  height: 100%;
+  //padding-bottom: 56.25%;
+  top: 0;
+  left: 0;
+  //transform: translate(-50%, -50%);
   z-index : 1001;
   pointer-events: none;
 
@@ -697,11 +699,11 @@ i.op-con{
 .op-watermark-container {
   position: absolute;
   width: 100%;
-  height: auto;
-  padding-bottom: 56.25%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  height: 100%;
+  //padding-bottom: 56.25%;
+  top: 0;
+  left: 0;
+  //transform: translate(-50%, -50%);
   z-index: 1002;
 
   .op-watermark {
