--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -110,7 +110,7 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  color: #eee;
+  color: #fff;
   font-size: 14px;
   font-weight: 100;
   outline: 0;
@@ -276,8 +276,8 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     z-index: 1000;
   }
 
@@ -308,7 +308,6 @@
       vertical-align: middle;
     }
     .videoAdUiAction {
-      color: #fff;
       padding: 8px 24px;
       cursor: pointer;
       direction: ltr;
@@ -406,7 +405,6 @@ i.op-con{
   white-space: nowrap;
   vertical-align: baseline;
   border-radius: 0.286em;
-  color: #fff;
   background-color: #12121c;
 }
 .op-playlist {
@@ -576,8 +574,6 @@ i.op-con{
     width: 100%;
     padding: 0 12px;
     text-align: center;
-    color: #fff;
-
 
     .op-message-text {
       display: inline-block;
@@ -645,6 +641,7 @@ i.op-con{
     display: block;
     font-size: 80px;
     line-height: 80px;
+    text-shadow: 2px 2px 7px rgb(0 0 0 / 80%), 0px 0px 1px rgb(0 0 0);
   }
 }
 
@@ -681,8 +678,7 @@ i.op-con{
       font-size: 2.857em;
       font-weight: bold;
       line-height: 1.4;
-      text-shadow: 1px 1px 2px rgba(217,217,217,0.5);
-      background: rgb(14 14 14 / 10%);
+      text-shadow: 2px 2px 7px rgb(0 0 0 / 80%), 0px 0px 1px rgb(0 0 0);
       &:after{
         display: block;
         content: '';
@@ -747,7 +743,6 @@ i.op-con{
     width: 100%;
     height: 38px;
     line-height: 38px;
-    color: #eee;
     cursor: pointer;
     outline: none;
     text-align: left;
@@ -816,7 +811,7 @@ i.op-con{
       position: absolute;
       width: 100%;
       height: 100%;
-      background-color: rgba(18, 18, 28, 0.3);
+      background-color: rgba(18, 18, 18, 0.5);
       pointer-events: none;
       /*-moz-transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
       -webkit-transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
@@ -1250,7 +1245,7 @@ i.op-con{
   .op-time-current,
   .op-time-separator,
   .op-time-duration {
-    color: #fff;
+
   }
 
   .op-live-badge {
@@ -1291,6 +1286,7 @@ i.op-con{
   overflow: hidden;
   width: 200px;
   padding: 6px 0;
+  z-index: 1010;
   background: rgba(28,28,28,0.9);
   text-shadow: 0 0 2px rgba(0,0,0,.5);
   font-weight : lighter;
@@ -1312,7 +1308,6 @@ i.op-con{
     height: 38px;
     padding-left: 12px;
     line-height: 38px;
-    color: #eee;
     cursor: pointer;
     outline: none;
     font-size: 0.8em;
@@ -1396,7 +1391,6 @@ i.op-con{
       font-size: 1em;
       line-height: 1.2em;
       text-shadow: 2px 2px 2px gray;
-      color: #fff;
       padding: .1em .3em;
       user-select: none;
       word-break: break-word;
