--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -145,7 +145,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 9999;
     margin: 0;
     position: fixed;
 
@@ -236,6 +236,7 @@
     height: 100%;
 
     video {
+      position: absolute;
       width: 100%;
       height : 100%;
     }
@@ -278,7 +279,7 @@
     height: 100%;
     left: 0;
     top: 0;
-    z-index: 1000;
+    z-index: 1;
   }
 
   .op-ads-button{
@@ -288,7 +289,7 @@
     pointer-events: auto;
     position: absolute;
     right: 0;
-    z-index: 1000;
+    z-index: 1;
     width: auto !important;
     height: auto !important;
     border-radius: 4px;
@@ -415,7 +416,7 @@ i.op-con{
   top : 0;
   padding: 2.857em;
   background: #000;
-  z-index : 1008;
+  z-index : 6;
   .op-badge{
     position: absolute;
     top: 0.857em;
@@ -566,7 +567,7 @@ i.op-con{
   left: 0;
   width: 100%;
   height: 100%;
-  z-index : 1007;
+  z-index : 4;
   .op-message-container {
     position: absolute;
     top: 45%;
@@ -602,6 +603,7 @@ i.op-con{
         height : 80px;
         line-height : 80px;
         display: inline-block;
+        text-shadow: 2px 2px 7px rgb(0 0 0 / 80%), 0px 0px 1px rgb(0 0 0);
       }
     }
     /*.op-message-button{
@@ -634,7 +636,7 @@ i.op-con{
   margin-top: -40px;
   margin-left: -40px;
   text-align: center;
-  z-index : 1007;
+  z-index : 5;
   .op-bigbutton {
     width: 80px;
     height: 80px;
@@ -657,7 +659,7 @@ i.op-con{
   top: 0;
   left: 0;
   //transform: translate(-50%, -50%);
-  z-index : 1001;
+  z-index : 2;
   pointer-events: none;
 
   .op-thumbnail-wrapper{
@@ -700,7 +702,7 @@ i.op-con{
   top: 0;
   left: 0;
   //transform: translate(-50%, -50%);
-  z-index: 1002;
+  z-index: 3;
 
   .op-watermark {
     position: absolute;
@@ -732,7 +734,7 @@ i.op-con{
   user-select: none;
   background-color: rgba(28,28,28,.9);
   text-shadow: 0 0 2px rgba(0,0,0,.5);
-  z-index: 1010;
+  z-index: 8;
 
   &.background{
     //opacity: 0;
@@ -806,7 +808,7 @@ i.op-con{
     bottom: 0px;
     height: 54px;
     width : 100%;
-    z-index : 1007;
+    z-index : 5;
     .op-gradient-bottom {
       position: absolute;
       width: 100%;
@@ -1084,7 +1086,7 @@ i.op-con{
   border: 2px solid #fff;
   border-radius: 2px;
   background-color: #000;
-  z-index: 1020;
+  z-index: 9;
 }
 
 .op-play-controller {
@@ -1286,7 +1288,7 @@ i.op-con{
   overflow: hidden;
   width: 200px;
   padding: 6px 0;
-  z-index: 1010;
+  z-index: 8;
   background: rgba(28,28,28,0.9);
   text-shadow: 0 0 2px rgba(0,0,0,.5);
   font-weight : lighter;
@@ -1348,7 +1350,7 @@ i.op-con{
   left: 50%;
   margin-left: -32px;
   margin-top: -32px;
-  z-index: 1009;
+  z-index: 7;
   display : none;
 
 
