Improve the user experience slightly on mobile devices
On narrow mobile devices, the quick move button takes up too much space,
so the player don't show it.

In mobile devices, the volume control slider is removed because
the volume is controlled using the device's volume button.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -1454,14 +1454,14 @@ i.op-con{
 .op-wrapper.ovenplayer.xsmall{
   font-size : 10px;
   .op-bigbutton-container {
-    margin-top: -20px;
-    margin-left: -20px;
+    margin-top: -30px;
+    margin-left: -30px;
 
     .op-bigbutton {
-      width: 40px;
-      height: 40px;
-      font-size: 40px;
-      line-height: 40px;
+      width: 60px;
+      height: 60px;
+      font-size: 60px;
+      line-height: 60px;
     }
   }
 
@@ -1717,5 +1717,12 @@ i.op-con{
   .op-button:active {
     transform: scale(1.1);
   }*/
+}
+
+
+@media only screen and (max-width: 399px)  {
+  .op-seek-button {
+    display: none !important;
+  }
 }
 
