Start refactoring for a better OvenPlayer

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 
-
 /**
  * @brief   Animation
  * */
@@ -67,28 +66,19 @@
 
 @font-face {
   font-family: "frameIcon";
-  src: url("../assets/images/ic-player-frame-jump.eot?rxg7gj");
-  src: url("../assets/images/ic-player-frame-jump.eot?rxg7gj#iefix") format('embedded-opentype'),
-        url("../assets/images/ic-player-frame-jump.ttf?rxg7gj") format('truetype'),
-        url("../assets/images/ic-player-frame-jump.svg?rxg7gj#icomoon") format('svg');
+  src: url("../assets/images/ic-player-frame-jump.ttf?rxg7gj") format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'op-icons';
-  src: url('../assets/fonts/fontello.eot?13010392');
-  src: url('../assets/fonts/fontello.eot?13010392#iefix') format('embedded-opentype'),
-  url('../assets/fonts/fontello.ttf?13010392') format('truetype'),
-  url('../assets/fonts/fontello.svg?13010392#fontello') format('svg');
+  src: url('../assets/fonts/fontello.ttf?13010392') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'op-seek-icons';
-  src: url('../assets/fonts/seek-icons.eot?13010392');
-  src: url('../assets/fonts/seek-icons.eot?13010392#iefix') format('embedded-opentype'),
-  url('../assets/fonts/seek-icons.ttf?13010392') format('truetype'),
-  url('../assets/fonts/seek-icons.svg?13010392#fontello') format('svg');
+  src: url('../assets/fonts/seek-icons.ttf?13010392') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -1095,20 +1085,6 @@ i.op-con{
 }
 
 /**
- * @brief   Play button
- * */
-
-.op-play-button  {
-  position: relative;
-  .op-play-button-playicon {
-    background: url('../assets/images/ic-player-play.svg');
-  }
-  .op-play-button-pauseicon {
-    background: url('../assets/images/ic-player-stop.svg');
-  }
-}
-
-/**
  * @brief   Seek button
  * */
 
@@ -1207,9 +1183,9 @@ i.op-con{
         width: 100%;
         background: #50e3c2;
         border-radius: 10px 0 0 10px;
-        -moz-transition: width .2s cubic-bezier(0.0,0.0,0.2,1);
-        -webkit-transition: width .2s cubic-bezier(0.0,0.0,0.2,1);
-        transition: width .2s cubic-bezier(0.0,0.0,0.2,1);
+        //-moz-transition: width .2s cubic-bezier(0.0,0.0,0.2,1);
+        //-webkit-transition: width .2s cubic-bezier(0.0,0.0,0.2,1);
+        //transition: width .2s cubic-bezier(0.0,0.0,0.2,1);
       }
 
       .op-volume-slider-handle {
@@ -1221,9 +1197,9 @@ i.op-con{
         border-radius: 10px;
         margin-top: -6px;
         background: #fff;
-        -moz-transition: left .2s cubic-bezier(0.0,0.0,0.2,1);
-        -webkit-transition: left .2s cubic-bezier(0.0,0.0,0.2,1);
-        transition: left .2s cubic-bezier(0.0,0.0,0.2,1);
+        //-moz-transition: left .2s cubic-bezier(0.0,0.0,0.2,1);
+        //-webkit-transition: left .2s cubic-bezier(0.0,0.0,0.2,1);
+        //transition: left .2s cubic-bezier(0.0,0.0,0.2,1);
       }
     }
   }
