Add showControls() API

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -172,6 +172,13 @@
     }
   }
 
+  &.op-no-controls {
+
+    .op-controls-container {
+      display: none !important;
+    }
+  }
+
   .op-ratio {
     padding-bottom: 56.25%; /*16:9*/
   }
