--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -439,7 +439,7 @@ i.op-con{
     font-size: 2.857em;
     font-weight: bold;
     &:after{
-      dispaly: block;
+      display: block;
       content: '';
       clear: both;
     }
