Improve subtitle text visibility

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -1354,6 +1354,7 @@ i.op-con{
     -webkit-transition: bottom .25s cubic-bezier(0.0,0.0,0.2,1);
     transition: bottom .25s cubic-bezier(0.0,0.0,0.2,1);
     .op-caption-text {
+      color: #fff;
       font-size: 1em;
       line-height: 1.2em;
       text-shadow: 2px 2px 2px gray;
