Add HLS DVR feature
In case of HLS Live Stream, it is possible to control the playback position with the Seek Bar.
Added live catch-up function when HLS live stream.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -1229,9 +1229,18 @@ i.op-con{
       content: '';
       border-radius: 6px;
     }
+
+    &.op-live-badge-delayed:before {
+      background: #fff;
+    }
+
     .op-live-badge-lowlatency {
       display: inline-block;
       margin-right: 5px;
+    }
+
+    .op-live-text {
+      cursor: pointer;
     }
   }
 
